#1: Go To Definition now works from the "Covers:" section.